--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Yue Liu</title>
+  <title>Liang Li</title>
 
-  <meta name="author" content="Li Liang (李亮)">
+  <meta name="author" content="Liang Li(李亮)">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -21,7 +21,7 @@
                 <name>Yue Liu</name>
               </p>
 
-              <p style="text-align:justify">LI Liang (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
+              <p style="text-align:justify">Li Liang (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
                 He is supervised by Prof. Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> in Pattern Recognition & Machine Intelligence Lab (PRMI). 
 		He received the Master degree from NUDT in 2020, and received Bachelor degree from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
@@ -73,44 +73,41 @@
 
 <!--        paper_list-->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-        <!--------------------------------------------------------------------------------------------------------------------------->
-
-            <tr>
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
 <!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/mole-bert.png' width="160">
+                <img src='images/liu_HSAN.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
-                <papertitle>Mole-BERT: Rethinking Pre-training Graph Neural Networks for Molecules</papertitle>
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>Multi-view Bipartite Graph Clustering with Coupled Noisy Feature Filter</papertitle>
               </a>
               <br>
-                <a href="https://junxia97.github.io/">Jun Xia</a>,
-                C. Zhao,
-                B. Hu,
-                Z. Gao,
-                C. Tan,
-                <strong>Yue Liu</strong>,
-                S. Li,
-                <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ&hl=zh-CN&oi=ao">Stan Z. Li</a>,
+              <strong>Liang Li</strong>,
+              <a href="https://junpuzhang.github.io/">J. Zhang</a>,
+              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
+              <a href="https://xinwangliu.github.io/">X. Liu</a>,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>ICLR</em>, 2023
+              <em>IEEE TKDE</em>, 2023
+<!-- 		    (<font color="red">Oral presentation</font>) -->
               <br>
-              <a href="">Paper</a>
+              <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
-              <a href="">Project Page</a>
+              <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
               <p style="text-align:justify">
-                The negative transfer in molecular graph pre-training are analyzed. To alleviate this issue, we first enlarge the atom vocabulary size and then develop two novel pre-training strategies at node and graph level.
+                We investigate the "anchor shift" issue incurred by noisy features in bipartite graph clustering and propose a strategy to measure the sparsity of bipartite graph.
               </p>
             </td>
           </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-            <tr bgcolor="#ffffd0">
+            <tr>
 <!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -122,16 +119,16 @@
                 <papertitle>Hard Sample Aware Network for Contrastive Deep Graph Clustering</papertitle>
               </a>
               <br>
-              <strong>Yue Liu</strong>,
+              <a href="yueliu1999.github.io/">Y. Liu</a>,
               <a href="https://xihongyang1999.github.io/">X. Yang</a>,
               <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">S. Zhou</a>,
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
               Z. Wang,
               <a href="https://liangke23.github.io/">K. Liang</a>,
               <a href="https://wxtu.github.io/">W. Tu</a>,
-              L. Li,
+              <strong>Liang Li </strong>,
               J. Duan,
-              C. Chen,
+              C. Chen
               <br>
               <em>AAAI (<font color="red">Oral presentation</font>)</em>, 2023
               <br>
@@ -143,79 +140,42 @@
                 We propose Hard Sample Aware Network (HSAN) to mine both the hard positive samples and hard negative samples with a comprehensive similarity measure criterion and a general dynamic sample weighing strategy.
               </p>
             </td>
-          </tr>
-
-
+          </tr>		
 <!--------------------------------------------------------------------------------------------------------------------------->
-
             <tr>
 <!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/yang_CCGC.png' width="160">
+                <img src='images/liu_HSAN.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
-                <papertitle>Cluster-guided Contrastive Graph Clustering Network</papertitle>
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>Let the data choose: Flexible and Diverse Anchor Graph Fusion for Scalable Multi-view Clustering</papertitle>
               </a>
               <br>
-              <a href="https://xihongyang1999.github.io/">X. Yang</a>,
-              <strong>Yue Liu</strong>,
-              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao">S. Zhou</a>,
-              J. Duan,
-              <a href="https://wxtu.github.io/">W. Tu</a>,
-              Q. Zheng,
+              <a href="https://jeaninezpp.github.io/">P. Zhang</a>,
+              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,		    
+  	      <strong>Liang Li</strong>,
+              <a href="https://xihongyang1999.github.io/">C. Zhang</a>,
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              L. Fang,
-              E. Zhu
+              E. Zhu,
+	      Z. Liu,
+	      L. Zhou,
+	      L. Luo
               <br>
-              <em>AAAI</em>, 2023
+              <em>AAAI (<font color="red">Oral presentation</font>)</em>, 2023
               <br>
-              <a href="">Paper</a>
+              <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
-              <a href="">Code</a>
+              <a href="https://github.com/yueliu1999/HSAN">Code</a>
               <p></p>
               <p style="text-align:justify">
-                Contrastive deep Graph Clustering network (CCGC) is proposed by mining the intrinsic supervision information in the high-confidence clustering results.
+                We propose to fuse diverse bipartite graphs across multiple views that can avoid tune the anchor number manually.
               </p>
             </td>
-          </tr>
+          </tr>	
 
-<!--------------------------------------------------------------------------------------------------------------------------->
-
-             <tr>
-<!--              -->
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/duan_GRADATE.png' width="160">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="">
-                <papertitle>Graph Anomaly Detection via Multi-Scale Contrastive Learning Networks with Augmented View</papertitle>
-              </a>
-              <br>
-              <a href="https://felixdjc.github.io">Jingcan Duan</a>,
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-                P. Zhang,
-                E. Zhu,
-                J. Hu,
-                H. Jin,
-              <strong>Yue Liu</strong>,
-                Z. Dong
-              <br>
-              <em>AAAI</em>, 2023
-              <br>
-              <a href="">Paper</a>
-              /
-              <a href="">Code</a>
-              <p></p>
-              <p style="text-align:justify">
-                  We design a new contrastive learning framework with subgraph-subgraph contrast for the graph anomaly detection.
-              </p>
-            </td>
-          </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
 
