--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
               <p style="text-align:justify">Li Liang (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
                 He is supervised by Prof. Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> in Pattern Recognition & Machine Intelligence Lab (PRMI). 
-		He received the Master degree from NUDT in 2020, and received Bachelor degree from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
+		He received the Master degree from NUDT in 2020, and received Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
               </p>
 
@@ -93,7 +93,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IEEE TKDE</em>, 2023
+              <em>IEEE TKDE (CCF-A/IF: 9.235)</em>, 2023
 <!-- 		    (<font color="red">Oral presentation</font>) -->
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
@@ -176,48 +176,9 @@
             </td>
           </tr>	
 
-
 <!--------------------------------------------------------------------------------------------------------------------------->
 
-            <tr>
-<!--              -->
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/ADGC_survey.png' width="160">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/pdf/2211.12875">
-                <papertitle>A Survey of Deep Graph Clustering: Taxonomy, Challenge, and Application</papertitle>
-              </a>
-              <br>
-              <strong>Yue Liu</strong>,
-              <a href="https://junxia97.github.io/">J. Xia</a>,
-              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">S. Zhou</a>,
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-              <a href="https://scholar.google.com/citations?user=3S9i5TkAAAAJ&hl=zh-CN&oi=ao">X. Guo</a>,
-              <a href="https://xihongyang1999.github.io/">X. Yang</a>,
-              <a href="https://liangke23.github.io/">K. Liang</a>,
-              <a href="https://wxtu.github.io/">W. Tu</a>,
-              <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ&hl=zh-CN&oi=ao">Stan Z. Li</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <br>
-              <em>arXiv</em>, 2022
-              <br>
-              <a href="https://arxiv.org/pdf/2211.12875">Paper</a>
-              /
-              <a href="https://github.com/yueliu1999/Awesome-Deep-Graph-Clustering">Project Page</a>
-              <p></p>
-              <p style="text-align:justify">
-                Deep graph clustering, which aims to group the nodes in graph into disjoint clusters, has become a new hot research spot. This paper summarizes the taxonomy, challenge, and application of deep graph clustering. We hope this work will serve as a quick guide and help researchers to overcome the challenges in this field.
-              </p>
-            </td>
-          </tr>
-
-<!--------------------------------------------------------------------------------------------------------------------------->
-
-         <tr>
-<!--              bgcolor="#ffffd0"-->
+            <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/junpu_MKC-DNM.png' width="160">
@@ -228,16 +189,15 @@
                 <papertitle>Multiple Kernel Clustering with Dual Noise Minimization</papertitle>
               </a>
               <br>
-<!--              Junpu Zhang, Liang Li, Siwei Wang, Jiyuan Liu, **Yue Liu**, Xinwang Liu, En Zhu-->
-              Junpu Zhang,
-              <a href="https://liliangnudt.github.io/">L. Li</a>,
+              <a href="https://junpuzhang.github.io/">J. Zhang</a>,
+              <strong>Liang Li (Co-first author)</strong>,		    
               <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-              <a href="https://wangsiwei2010.github.io/">J. Liu</a>,
-              <strong>Yue Liu</strong>,
+              <a href="https://liujiyuan13.github.io/">J. Liu</a>,
+              <a href="yueliu1999.github.io/">Y. Liu</a>,
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              E. Zhu,
+              E. Zhu
               <br>
-              <em>ACMMM</em>, 2022
+              <em>ACM MM</em>, 2022
               <br>
               <a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548334?casa_token=g16Xqzve7TUAAAAA:I1pf0PdeSmTt7Eodutlf9srhRFkoIs4v0eezz-OQwZZHaBSPKC69bGnGyfLMCn_n6AAeE8jFUihjMdg">Paper</a>
               /
@@ -250,73 +210,34 @@
           </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-
-           <tr>
-<!--              bgcolor="#ffffd0"-->
+            <tr bgcolor="#ffffd0">
+<!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/tu_ITR.png' width="160">
+                <img src='images/liu_HSAN.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://changwangzhang.github.io/files/2022_ijcai_itr.pdf">
-                <papertitle>Initializing Then Refining: A Simple Graph Attribute Imputation Network</papertitle>
+              <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">
+                <papertitle>Local Sample-Weighted Multiple Kernel Clustering With Consensus Discriminative Graph</papertitle>
               </a>
               <br>
-<!--              Wenxuan Tu, Sihang Zhou, Xinwang Liu, **Yue Liu**, Zhiping Cai, En Zhu, Changwang Zhang, and Jieren Cheng: -->
-              <a href="https://wxtu.github.io/">Wenxuan Tu</a>,
-              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao">S. Zhou</a>,
+              <strong>Liang Li</strong>,
+              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <strong>Yue Liu</strong>,
-              Z. Cai,
-              E. Zhu,
-              <a href="https://changwangzhang.github.io/">C. Zhang</a>,
-              J. Cheng
+	      E, Zhu,
+	      L, Shen,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IJCAI</em>, 2022
+              <em>IEEE TNNLS (CCF-B/IF: 14.255)</em>, 2022
               <br>
-              <a href="https://changwangzhang.github.io/files/2022_ijcai_itr.pdf">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">Paper</a>
               /
-              <a href="https://github.com/WxTu/ITR">Code</a>
+              <a href="https://github.com/liliangnudt/LSWMKC">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We design a graph-oriented imputation framework called Initializing Then Refining (ITR), which first employs the structure information as the initial imputation, and then adaptively refine the imputed latent variables.
-              </p>
-            </td>
-          </tr>
-
-<!--------------------------------------------------------------------------------------------------------------------------->
-
-          <tr bgcolor="#ffffd0">
-<!--              bgcolor="#ffffd0"-->
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <img src='images/DCRN.png' width="160">
-              </div>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.aaai.org/AAAI22Papers/AAAI-5928.LiuY.pdf">
-                <papertitle>Deep Graph Clustering via Dual Correlation Reduction</papertitle>
-              </a>
-              <br>
-              <strong>Yue Liu</strong>,
-<!--              Yue Liu, Wenxuan Tu, Sihang Zhou, Xinwang Liu, Linxuan Song, Xihong Yang, En Zhu-->
-              <a href="https://wxtu.github.io/">W. Tu</a>,
-              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao">S. Zhou</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              L. Song,
-              <a href="https://xihongyang1999.github.io/">X. Yang</a>,
-              E. Zhu
-
-              <br>
-              <em>AAAI</em>, 2022
-              <br>
-              <a href="https://www.aaai.org/AAAI22Papers/AAAI-5928.LiuY.pdf">Paper</a>
-              /
-              <a href="https://github.com/yueliu1999/DCRN">Code</a>
-              <p></p>
-              <p style="text-align:justify">
-              We propose a self-supervised deep graph clustering method termed Dual Correlation Reduction Network (DCRN) to address the representation collapse issue by reducing information correlation in both sample and feature levels.
+                We investigate an important issue that how to localize the kernel matrix in multi-kernel clustering. Compared to the traditional KNN manner that neglects the ranking relationship of neighbors, this paper proposes a novel localized MKC algorithm coupled flexible graph learning, termd LSWMKC, which achieves fully exploring the latent local manifold.
               </p>
             </td>
           </tr>
@@ -336,9 +257,8 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-            <li>Reviewer for Pattern Recognition</li>
-            <li>Reviewer for AAAI 2023</li>
-            <li>Reviewer for PRCV 2022</li>
+            <li>Reviewer for TNNLS, ACM TOMM</li>
+            <li>Reviewer for AAAI23, PRCV22</li>
             </ul>
 <!--          <tr>-->
 <!--            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>-->
@@ -367,17 +287,16 @@
         </tbody></table>
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
-            <li>China National Scholarship for Graduate Student.</li>
-            <li>Scholarship, NUDT. [<a href="images/Scholarship-NUDT.pdf">PDF</a>]</li>
-            <li>Excellent Graduated Graduate Student of Hebei Province. [<a href="images/Outstanding graduate.pdf">PDF</a>]</li>
-            <li>Recommendation for admission to NUDT. [<a href="images/Recommendation.pdf">PDF</a>]</li>
-            <li>China National Scholarship for Undergraduate Student. [<a href="images/National Scholarship 2020.pdf">PDF</a>]</li>
-            <li>Meritorious Winner, Interdisciplinary Contest in Modeling (ICM). [<a href="images/ICM.pdf">PDF</a>]</li>
-            <li>First Prize, Hebei Mathematics Competition for College Students (HMC). [<a href="images/HMC.pdf">PDF</a>]</li>
-            <li>Scholarship, NEUQ. [<a href="images/Scholarship.pdf">PDF</a>]</li>
-            </ul>
+            <li>National Scholarship, 2022.</li>
+            <li>First Prize of Postgraduate Academic Scholarship, 2021.</li>
+            <li>National Scholarship, 2020.</li>
+            <li>Postgraduate Scientific Research Innovation Project of Hunan Province (CX20200008, CX20200084), 2020.</li>
+            <li>Second Prize of "HUAWEI" the 16th China Post-Graduate MathematicalContest in Modeling, 2019.</li>		    
+            <li>Excellent Graduated Graduate Student, HUST, 2018. [<a href="images/Scholarship.pdf">PDF</a>]</li>
+            <li>Recommendation for admission to NUDT, 2018. [<a href="images/Recommendation.pdf">PDF</a>]</li>
+		</ul>
         </table>
-
+<!-- [<a href="images/Scholarship-NUDT.pdf">PDF</a>] -->
 <!--        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>-->
 <!--          <tr>-->
 <!--            <td>-->
