--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
             <li>National Scholarship, 2020.</li>
             <li>Postgraduate Scientific Research Innovation Project of Hunan Province (CX20200008, CX20200084), 2020.</li>
             <li>Second Prize of "HUAWEI" the 16th China Post-Graduate MathematicalContest in Modeling, 2019.</li>		    
-            <li>Excellent Graduated Graduate Student, HUST, 2018. [<a href="images/Scholarship.pdf">PDF</a>]</li>
-            <li>Recommendation for admission to NUDT, 2018. [<a href="images/Recommendation.pdf">PDF</a>]</li>
-		</ul>
+            <li>Excellent Graduated Graduate Student, HUST, 2018. </li>
+            <li>Recommendation for admission to NUDT, 2018. </li>
+	    </ul>
         </table>
 <!-- [<a href="images/Scholarship-NUDT.pdf">PDF</a>] -->
 <!--        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>-->
