--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
           </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-            <tr bgcolor="#ffffd0">
-<!--              -->
+<!--             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
@@ -240,14 +239,12 @@
                 We investigate an important issue that how to localize the kernel matrix in multi-kernel clustering. Compared to the traditional KNN manner that neglects the ranking relationship of neighbors, this paper proposes a novel localized MKC algorithm coupled flexible graph learning, termd LSWMKC, which achieves fully exploring the latent local manifold.
               </p>
             </td>
-          </tr>
+          </tr> -->
 <!--------------------------------------------------------------------------------------------------------------------------->
 
 <!--        paper_list-->
 
         </tbody></table>
-
-
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -260,24 +257,8 @@
             <li>Reviewer for TNNLS, ACM TOMM</li>
             <li>Reviewer for AAAI23, PRCV22</li>
             </ul>
-<!--          <tr>-->
-<!--            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>-->
-<!--            <td width="75%" valign="center">-->
-<!--              <a href="https://cvpr2022.thecvf.com/area-chairs">Area Chair, CVPR 2022</a>-->
-<!--              <br>-->
-<!--              <a href="http://cvpr2021.thecvf.com/area-chairs">Area Chair & Longuet-Higgins Award Committee Member, CVPR 2021</a>-->
-<!--              <br>-->
-<!--              <a href="http://cvpr2019.thecvf.com/area_chairs">Area Chair, CVPR 2019</a>-->
-<!--              <br>-->
-<!--              <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">Area Chair, CVPR 2018</a>-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--            </td>-->
-<!--          </tr>-->
-
+<!--------------------------------------------------------------------------------------------------------------------------->
         </table>
-
-
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -296,21 +277,7 @@
             <li>Recommendation for admission to NUDT, 2018. </li>
 	    </ul>
         </table>
-<!-- [<a href="images/Scholarship-NUDT.pdf">PDF</a>] -->
-<!--        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>-->
-<!--          <tr>-->
-<!--            <td>-->
-<!--              <heading>Friends</heading>-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        </tbody></table>-->
-<!--        <table width="100%" align="center" border="0" cellpadding="20"><tbody>-->
-<!--        \ \ \ <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao">Sihang Zhou</a>, <a href="http://xihongyang1999.github.io">Xihong Yang</a>-->
-<!--            <ul>-->
-<!--              <li><a href="http://wxtu.github.io">Wenxuan Tu</a></li>-->
-<!--              <li><a href="http://junxia97.github.io">Jun Xia</a></li>-->
-<!--            </ul>-->
-<!--        </table>-->
+
         <p align="center">Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website</p>
 </body>
 </html>
