--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
           </tr>		
 <!--------------------------------------------------------------------------------------------------------------------------->
             <tr>
-<!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
@@ -210,7 +209,7 @@
           </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
-<!--             <tr bgcolor="#ffffd0">
+            <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
@@ -239,12 +238,11 @@
                 We investigate an important issue that how to localize the kernel matrix in multi-kernel clustering. Compared to the traditional KNN manner that neglects the ranking relationship of neighbors, this paper proposes a novel localized MKC algorithm coupled flexible graph learning, termd LSWMKC, which achieves fully exploring the latent local manifold.
               </p>
             </td>
-          </tr> -->
+          </tr>
 <!--------------------------------------------------------------------------------------------------------------------------->
 
-<!--        paper_list-->
-
-        </tbody></table>
+<!--Service-->
+<!--         </tbody></table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -256,9 +254,9 @@
             <ul>
             <li>Reviewer for TNNLS, ACM TOMM</li>
             <li>Reviewer for AAAI23, PRCV22</li>
-            </ul>
+            </ul> -->
 <!--------------------------------------------------------------------------------------------------------------------------->
-        </table>
+<!--         </table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -276,7 +274,7 @@
             <li>Excellent Graduated Graduate Student, HUST, 2018. </li>
             <li>Recommendation for admission to NUDT, 2018. </li>
 	    </ul>
-        </table>
+        </table> -->
 
         <p align="center">Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website</p>
 </body>
