--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <!--------------------------------------------------------------------------------------------------------------------------->
 
 <!--Service-->
-<!--         </tbody></table>
+        </tbody></table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -254,9 +254,9 @@
             <ul>
             <li>Reviewer for TNNLS, ACM TOMM</li>
             <li>Reviewer for AAAI23, PRCV22</li>
-            </ul> -->
+            </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
-<!--         </table>
+        </table>
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
@@ -274,7 +274,7 @@
             <li>Excellent Graduated Graduate Student, HUST, 2018. </li>
             <li>Recommendation for admission to NUDT, 2018. </li>
 	    </ul>
-        </table> -->
+        </table>
 
         <p align="center">Design and source code from <a href="https://jonbarron.info/">Jon Barron</a>'s website</p>
 </body>
