--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 <!--------------------------------------------------------------------------------------------------------------------------->
             <tr bgcolor="#ffffd0">
-<!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
@@ -93,22 +92,20 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IEEE TKDE (CCF-A/IF: 9.235)</em>, 2023
-<!-- 		    (<font color="red">Oral presentation</font>) -->
+              <em>IEEE TKDE (<font color="red">CCF-A/IF: 9.235</font>)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We investigate the "anchor shift" issue incurred by noisy features in bipartite graph clustering and propose a strategy to measure the sparsity of bipartite graph.
+                We investigate the "anchor shift" issue incurred by noisy features in bipartite graph clustering, and propose a novel strategy to measure the sparsity of bipartite graph theoretically.
               </p>
             </td>
           </tr>
 
 <!--------------------------------------------------------------------------------------------------------------------------->
             <tr>
-<!--              -->
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
@@ -130,7 +127,7 @@
               J. Duan,
               C. Chen
               <br>
-              <em>AAAI (<font color="red">Oral presentation</font>)</em>, 2023
+              <em>AAAI (<font color="red">CCF-A/Oral presentation</font>)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
@@ -163,7 +160,7 @@
 	      L. Zhou,
 	      L. Luo
               <br>
-              <em>AAAI (<font color="red">Oral presentation</font>)</em>, 2023
+              <em>AAAI (<font color="red">CCF-A</font>)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
@@ -196,7 +193,7 @@
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
               E. Zhu
               <br>
-              <em>ACM MM</em>, 2022
+              <em>ACM MM (<font color="red">CCF-A</font>)</em>, 2022
               <br>
               <a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548334?casa_token=g16Xqzve7TUAAAAA:I1pf0PdeSmTt7Eodutlf9srhRFkoIs4v0eezz-OQwZZHaBSPKC69bGnGyfLMCn_n6AAeE8jFUihjMdg">Paper</a>
               /
@@ -228,7 +225,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IEEE TNNLS (CCF-B/IF: 14.255)</em>, 2022
+              <em>IEEE TNNLS (<font color="red">CCF-B/IF: 14.255</font>)</em>, 2022
               <br>
               <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">Paper</a>
               /
