--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <name>Yue Liu</name>
               </p>
 
-              <p style="text-align:justify">Li Liang (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
+              <p style="text-align:justify">Liang Li (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
                 He is supervised by Prof. Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> in Pattern Recognition & Machine Intelligence Lab (PRMI). 
-		He received the Master degree from NUDT in 2020, and received Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
+		He received the Master degree from NUDT in 2020, and received the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
               </p>
 
@@ -52,7 +52,9 @@
 <!--               <li><b>[<font color="red">2022.09</font>]</b> I am visiting  <a href="https://en.westlake.edu.cn/">Westlake University</a>, working with <a href="https://junxia97.github.io/">Jun Xia</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=Y-nyLGIAAAAJ&hl=zh-CN&oi=ao">Stan Z. Li</a>.</li> -->
               <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>ACMMM</em> 2022.</li>
               <li><b>[<font color="red">2022.06</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em> 2022.</li>		      
-              <li><b>[<font color="red">2021.12</font>]</b> I won the first-class scholarship of freshman at NUDT.</li>
+              <li><b>[<font color="red">2021.12</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>
+              <li><b>[<font color="red">2020.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>		    
+              <li><b>[<font color="red">2020.10</font>]</b> I won the first prize of postgraduate academic scholarship at NUDT.</li>		      
               </ul>
             </td>
           </tr>
