--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IEEE TKDE (<font color="red">CCF-A/IF: 9.235</font>)</em>, 2023
+              <em>IEEE TKDE (<font color="red">CCF-A, IF: 9.235</font>)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
@@ -129,7 +129,7 @@
               J. Duan,
               C. Chen
               <br>
-              <em>AAAI (<font color="red">CCF-A/Oral presentation</font>)</em>, 2023
+              <em>AAAI (<font color="red">CCF-A, Oral presentation</font>)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2212.08665">Paper</a>
               /
@@ -227,7 +227,7 @@
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
               <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
               <br>
-              <em>IEEE TNNLS (<font color="red">CCF-B/IF: 14.255</font>)</em>, 2022
+              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2022
               <br>
               <a href="https://ieeexplore.ieee.org/document/9830658/?denied=">Paper</a>
               /
