--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
               <a href="https://xinwangliu.github.io/">X. Liu</a>,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
-              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
+              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>		    
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 9.235</font>)</em>, 2023
               <br>
@@ -225,7 +225,7 @@
 	      E, Zhu,
 	      L, Shen,
               <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
-              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>,		    
+              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>		    
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2022
               <br>
