--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/junpu_MKC-DNM.png' width="160">
+                <img src='images/Liang_MM22.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
