--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Yue Liu</name>
+                <name>Liang Li</name>
               </p>
 
               <p style="text-align:justify">Liang Li (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
@@ -40,7 +40,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/liuyue_1.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/liuyue_1.jpg" class="hoverZoomLink"></a>
+              <a href="images/LiangLi.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/LiangLi.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
