--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://www.researchgate.net/profile/Liang-Li-153?ev=hdr_xprf">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://orcid.org/0000-0002-8116-0668">OCRID</a> &nbsp/&nbsp
                 <a href="https://twitter.com/LiangLi_NUDT/">Twitter</a> &nbsp/&nbsp		      
-                <a href="data/LiangWchat.png">Wechat</a> 		      
+                <a href="images/LiangWchat.png">Wechat</a> 		      
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
