--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
               <p style="text-align:justify">Liang Li (李亮) is a Ph.D. student at College of Computer, <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China. 
                 He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> in Pattern Recognition & Machine Intelligence Lab (PRMI). 
-		He received the Master degree from NUDT in 2020, and received the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
+		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
               </p>
 
