--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
 
               <p style="text-align:justify">Liang Li (李亮) is a Ph.D. student at <a href="https://english.nudt.edu.cn/">National University of Defence Technology (NUDT)</a>, Hunan, China since 2021. 
-                He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> in Pattern Recognition & Machine Intelligence Lab (PRMI). 
+                He is supervised by Prof. <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a> and Prof. <a href="https://xinwangliu.github.io/">Xinwang Liu</a> at Pattern Recognition & Machine Intelligence Lab (PRMI). 
 		Before that, he received the Master degree from NUDT in 2020, and got the Bachelor degree in 2018 from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>, Wuhan, China.
 		His research interests include machine learning, unsupervised clustering, GNN, and self-supervised learning.
               </p>
