--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <ul>
             <li>Reviewer for TNNLS, ACM TOMM</li>
-            <li>Reviewer for AAAI23, PRCV22</li>
+            <li>Reviewer for ACM MM23, AAAI23, PRCV22</li>
             </ul>
 <!--------------------------------------------------------------------------------------------------------------------------->
         </table>
