--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+              <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TNNLS</em>.</li>
               <li><b>[<font color="red">2023.04</font>]</b> One paper has been accepted by <em>IEEE TKDE</em>.</li>
               <li><b>[<font color="red">2022.11</font>]</b> Two papers have been accepted by <em>AAAI</em> 2023.</li>
               <li><b>[<font color="red">2022.10</font>]</b> I won the China National Scholarship (top 0.2%).</li>
