--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 9.235</font>)</em>, 2023
               <br>
-              <a href="https://arxiv.org/abs/2212.08665">Paper</a>
+              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
               /
               <a href="https://github.com/liliangnudt/MVBGC-NFF">Code</a>
               <p></p>
