--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>BGAE: Auto-encoding Multi-view Bipartite Graph Clustering</papertitle>
+              </a>
+              <br>
+              <strong>Liang Li</strong>,
+              <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
+              <br>
+              <em>Preprint </em>, 2023
+              <br>
+              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              /
+              <a href="https://github.com/liliangnudt/BGAE">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                We propose a novel "encoding-decoding" framework in graph machine learning settings.
+              </p>
+            </td>
+          </tr>		
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <img src='images/Liang_TKDE23.png' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
                 <papertitle>Multi-view Bipartite Graph Clustering with Coupled Noisy Feature Filter</papertitle>
               </a>
               <br>
