--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/Liang_TKDE23.png' width="160">
+                <img src='images/AE.png' width="160">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
