--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
             <tr bgcolor="#ffffd0">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <img src='images/AE.png' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2212.08665">
+                <papertitle>Jet-BGC: Joint Latent Representation Learning and Label Inference Bipartite Graph Clustering</papertitle>
+              </a>
+              <br>
+              <strong>Liang Li</strong>,
+              <a href="https://www.researchgate.net/profile/Jie-Liu-91">Jie Liu</a>,		    
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
+              <br>
+              <em>Preprint </em>, 2023
+              <br>
+              <a href="https://ieeexplore.ieee.org/document/10109823">Paper</a>
+              /
+              <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                We propose a novel Jet-BGC model that integrating embedding learning and label inference.
+              </p>
+            </td>
+          </tr>				
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr bgcolor="#ffffd0">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <img src='images/Liang_TKDE23.png' width="160">
               </div>
             </td>
