--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
                 <papertitle>Hard Sample Aware Network for Contrastive Deep Graph Clustering</papertitle>
               </a>
               <br>
-              <a href="yueliu1999.github.io/">Y. Liu</a>,
-              <a href="https://xihongyang1999.github.io/">X. Yang</a>,
-              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">S. Zhou</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
+              <a href="yueliu1999.github.io/">Yue Liu</a>,
+              <a href="https://xihongyang1999.github.io/">Xihong Yang</a>,
+              <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">Sihang Zhou</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
               Z. Wang,
-              <a href="https://liangke23.github.io/">K. Liang</a>,
-              <a href="https://wxtu.github.io/">W. Tu</a>,
+              <a href="https://liangke23.github.io/">Ke Liang</a>,
+              <a href="https://wxtu.github.io/">Wenxuan Tu</a>,
               <strong>Liang Li </strong>,
-              J. Duan,
-              C. Chen
+              Jingcan Duan,
+              Cancan Chen
               <br>
               <em>AAAI (<font color="red">CCF-A, Oral presentation</font>)</em>, 2023
               <br>
@@ -213,15 +213,15 @@
                 <papertitle>Let the data choose: Flexible and Diverse Anchor Graph Fusion for Scalable Multi-view Clustering</papertitle>
               </a>
               <br>
-              <a href="https://jeaninezpp.github.io/">P. Zhang</a>,
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,		    
+              <a href="https://jeaninezpp.github.io/">Pei Zhang</a>,
+              <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,		    
   	      <strong>Liang Li</strong>,
-              <a href="https://scholar.google.co.uk/citations?user=4j8dHOkAAAAJ&hl=en">C. Zhang</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <a href="https://www.researchgate.net/profile/En-Zhu">E. Zhu</a>,		        
-              <a href="https://scholar.google.com/citations?user=Em0jNiUAAAAJ&hl=en">Z. Liu</a>,		        		  
-              <a href="http://asclab.nuaa.edu.cn/_upload/tpl/05/0c/1292/template1292/member/zhoulu.html">L. Zhou</a>,	
-              <a href="https://scholar.google.com/citations?user=FcnJSwQAAAAJ&hl=zh-CN">L. Luo</a>,		        		    
+              <a href="https://scholar.google.co.uk/citations?user=4j8dHOkAAAAJ&hl=en">Changwang. Zhang</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://www.researchgate.net/profile/En-Zhu">En Zhu</a>,		        
+              <a href="https://scholar.google.com/citations?user=Em0jNiUAAAAJ&hl=en">Zhe Liu</a>,		        		  
+              <a href="http://asclab.nuaa.edu.cn/_upload/tpl/05/0c/1292/template1292/member/zhoulu.html">Lu Zhou</a>,	
+              <a href="https://scholar.google.com/citations?user=FcnJSwQAAAAJ&hl=zh-CN">Lei Luo</a>,		        		    
               <br>
               <em>AAAI (<font color="red">CCF-A</font>)</em>, 2023
               <br>
@@ -248,13 +248,13 @@
                 <papertitle>Multiple Kernel Clustering with Dual Noise Minimization</papertitle>
               </a>
               <br>
-              <a href="https://junpuzhang.github.io/">J. Zhang</a>,
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
               <strong>Liang Li (Co-first author)</strong>,		    
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-              <a href="https://liujiyuan13.github.io/">J. Liu</a>,
-              <a href="yueliu1999.github.io/">Y. Liu</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <a href="https://www.researchgate.net/profile/En-Zhu">E. Zhu</a>,		        
+              <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
+              <a href="https://liujiyuan13.github.io/">Jiyuan Liu</a>,
+              <a href="yueliu1999.github.io/">Yue Liu</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://www.researchgate.net/profile/En-Zhu">En Zhu</a>,		        
               <br>
               <em>ACM MM (<font color="red">CCF-A</font>)</em>, 2022
               <br>
@@ -281,12 +281,12 @@
               </a>
               <br>
               <strong>Liang Li</strong>,
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <a href="https://www.researchgate.net/profile/En-Zhu">E. Zhu</a>,		        
-	      <a href="https://www.researchgate.net/profile/Li-Shen-2">L, Shen</a>,		        		    
-              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
-              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>		    
+              <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://www.researchgate.net/profile/En-Zhu">En Zhu</a>,		        
+	      <a href="https://www.researchgate.net/profile/Li-Shen-2">Li Shen</a>,		        		    
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2022
               <br>
