--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
               </a>
               <br>
               <strong>Liang Li</strong>,
-              <a href="https://junpuzhang.github.io/">J. Zhang</a>,
-              <a href="https://wangsiwei2010.github.io/">S. Wang</a>,
-              <a href="https://xinwangliu.github.io/">X. Liu</a>,
-              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">K. Li</a>,
-              <a href="http://www.cs.newpaltz.edu/~lik/">K. Li</a>		    
+              <a href="https://junpuzhang.github.io/">Junpu Zhang</a>,
+              <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
+              <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+              <a href="https://scholar.google.com/citations?user=mSpHqSUAAAAJ&hl=en">Kenli Li</a>,
+              <a href="http://www.cs.newpaltz.edu/~lik/">Keqin Li</a>		    
               <br>
               <em>IEEE TKDE (<font color="red">CCF-A, IF: 9.235</font>)</em>, 2023
               <br>
