--- a/index.html
+++ b/index.html
@@ -171,6 +171,40 @@
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <img src='images/liu_SCGC.png' width="160">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>Simple Contrastive Graph Clustering</papertitle>
+              </a>
+              <br>
+                <a href="yueliu1999.github.io/">Yue Liu</a>,
+                <a href="https://xihongyang1999.github.io/">Xihong Yang</a>,
+                <a href="https://scholar.google.com/citations?user=p9Se8kYAAAAJ&hl=zh-CN&oi=ao/">Sihang Zhou</a>,
+                <a href="https://xinwangliu.github.io/">Xinwang Liu</a>,
+                <a href="https://wangsiwei2010.github.io/">Siwei Wang</a>,
+                <a href="https://liangke23.github.io/">Ke Liang</a>,
+                <a href="https://wxtu.github.io/">Wenxuan Tu</a>,
+                <strong>Liang Li</strong>,
+
+              <br>
+              <em>TNNLS</em>, 2023
+              <br>
+              <a href="">Paper</a>
+              /
+              <a href="https://github.com/yueliu1999/SCGC">Code</a>
+              <p></p>
+              <p style="text-align:justify">
+                  We propose to replace the complicated and consuming graph data augmentations by designing the parameter un-shared siamese encoders and perurbing the node embeddings.
+
+              </p>
+            </td>
+          </tr>
+<!--------------------------------------------------------------------------------------------------------------------------->
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <img src='images/liu_HSAN.png' width="160">
               </div>
             </td>
