--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <strong>Liang Li</strong>,
 
               <br>
-              <em>TNNLS</em>, 2023
+              <em>IEEE TNNLS (<font color="red">CCF-B, IF: 14.255</font>)</em>, 2023
               <br>
               <a href="">Paper</a>
               /
