--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Jet-BGC: Joint Latent Representation Learning and Label Inference Bipartite Graph Clustering</papertitle>
+                <papertitle>Jet-BGC: Joint Latent Embedding and Label Inference Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
