--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2212.08665">
-                <papertitle>Jet-BGC: Joint Latent Embedding and Label Inference Bipartite Graph Clustering</papertitle>
+                <papertitle>Jet-BGC: Joint Latent Embedding and Structural Fusion Bipartite Graph Clustering</papertitle>
               </a>
               <br>
               <strong>Liang Li</strong>,
@@ -132,7 +132,7 @@
               <a href="https://github.com/liliangnudt/Jet-BGC">Code</a>
               <p></p>
               <p style="text-align:justify">
-                We propose a novel Jet-BGC model that integrating embedding learning and label inference.
+                We propose a novel Jet-BGC model that integrating embedding learning and Structural Fusion.
               </p>
             </td>
           </tr>				
